# defradb-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/config/: config.rs  config_file.rs  config_utils.rs  errors.rs  mod.rs
src/datastore/: mod.rs
src/datastore/badger/v4/: errors.rs  iterator.rs  mod.rs
