[package]
name = "defradb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
dirs = "5.0.1"
multiaddr = "0.18.0"
